// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<anchor> demo: > render [affix] correctly 1`] = `
<div>
  <!--v-if-->
  <div class="">
    <div class="sd-anchor sd:bg-(--color-bg-1)">
      <div class="sd-anchor-line-slider"></div>
      <ul class="sd-anchor-list">
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#basic">Basic</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#line-less">LineLess Mode</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#affix"> Affix </a>
          <ul class="sd-anchor-sublist">
            <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#boundary">Scroll Boundary</a>
              <!--v-if-->
            </li>
            <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#hash">Hash mode</a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<anchor> demo: > render [basic] correctly 1`] = `
<div class="sd-anchor">
  <div class="sd-anchor-line-slider"></div>
  <ul class="sd-anchor-list">
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#basic">Basic</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#line-less">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#affix"> Affix </a>
      <ul class="sd-anchor-sublist">
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#boundary">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#hash">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<anchor> demo: > render [boundary] correctly 1`] = `
<div class="sd-anchor">
  <div class="sd-anchor-line-slider"></div>
  <ul class="sd-anchor-list">
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#basic">Basic</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#line-less">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#affix"> Affix </a>
      <ul class="sd-anchor-sublist">
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#boundary">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#hash">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<anchor> demo: > render [hash] correctly 1`] = `
<div class="sd-anchor">
  <div class="sd-anchor-line-slider"></div>
  <ul class="sd-anchor-list">
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#basic">Basic</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#line-less">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#affix"> Affix </a>
      <ul class="sd-anchor-sublist">
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#boundary">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#hash">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<anchor> demo: > render [line-less] correctly 1`] = `
<div class="sd-anchor sd-anchor-line-less">
  <!--v-if-->
  <ul class="sd-anchor-list">
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#basic">Basic</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#line-less">LineLess Mode</a>
      <!--v-if-->
    </li>
    <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#affix"> Affix </a>
      <ul class="sd-anchor-sublist">
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#boundary">Scroll Boundary</a>
          <!--v-if-->
        </li>
        <li class="sd-anchor-link-item"><a class="sd-anchor-link" href="#hash">Hash mode</a>
          <!--v-if-->
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
